Imported from https://cd2357@github.com/cd2357/bitcoin-rpc-client.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = Java Bitcoind RPC helper class
+[access "refs/*"]
+	owner = group user/cd2357
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/cd2357
+	label-Verified = -1..+1 group user/cd2357
+	push = group user/cd2357
+	read = group user/cd2357
+	rebase = group user/cd2357
+	removeReviewer = group user/cd2357
+	submit = group user/cd2357
+[access "refs/heads/*"]
+	create = group user/cd2357
+	push = +force group user/cd2357
+	pushMerge = group user/cd2357
+	read = group user/cd2357
+[access "refs/tags/*"]
+	push = group user/cd2357
+	push = +force group user/cd2357
